--- a/loading.html
+++ b/loading.html
@@ -157,7 +157,7 @@
         </div>
     </div>
     <audio id="bgMusic" loop>
-        <source src="Kjenni_MS_Dymka_-_Vorona_80311777.mp3" type="audio/mpeg">
+        <source src="vorona.mp3" type="audio/mpeg">
     </audio>
     <button class="music-btn" id="musicBtn" onclick="toggleMusic()">🔊 Включить музыку</button>
     <div class="container">
@@ -230,3 +230,4 @@
     </script>
 </body>
 </html>
+
