--- a/loading.html
+++ b/loading.html
@@ -162,7 +162,7 @@
         </div>
     </div>
     <audio id="bgMusic" loop autoplay>
-        <source src="Kjenni_MS_Dymka_-_Vorona_80311777.mp3" type="audio/mpeg">
+        <source src="arbalet.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
         <div class="logo">PLUVER CITY</div>
@@ -214,3 +214,4 @@
     </script>
 </body>
 </html>
+
