--- a/loading.html
+++ b/loading.html
@@ -165,7 +165,7 @@
         <source src="Kjenni_MS_Dymka_-_Vorona_80311777.mp3" type="audio/mpeg">
     </audio>
     <div class="container">
-        <div class="logo">PLUVER CITY</div>
+        <div class="logo">POSO - CITY</div>
         <div class="loading-bar-container">
             <div class="loading-bar" id="loadingBar"></div>
         </div>
@@ -214,3 +214,4 @@
     </script>
 </body>
 </html>
+
